# project-memory-mcp

./: LICENSE  README.md  pyproject.toml
project_memory_mcp/: __init__.py  cli.py  server.py  store.py
project_memory_mcp/skills/project-memory-forget/: SKILL.md
project_memory_mcp/skills/project-memory-recall/: SKILL.md
project_memory_mcp/skills/project-memory-remember/: SKILL.md
project_memory_mcp/templates/: STORE_README.md  labels.json  memory.schema.json
tests/: test_cli.py  test_store.py  test_validation.py
