[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "project-memory-mcp"
version = "0.1.0"
description = "File-based, git-friendly project memory for coding agents: a JSON memory store with a label graph, served over MCP, with matching agent skills."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Alexey Zabolotniy" }]
requires-python = ">=3.10"
keywords = ["mcp", "model-context-protocol", "agent", "memory", "claude-code", "codex", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]

[project.scripts]
project-memory-mcp = "project_memory_mcp.cli:main"

[tool.setuptools]
packages = ["project_memory_mcp"]

[tool.setuptools.package-data]
project_memory_mcp = ["templates/*", "skills/*/SKILL.md"]
